// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render text with color 1`] = `
<span
  class="vxteaser-text vxteaser-color--highlight"
>
  This is the text with highlight color!
</span>
`;

exports[`render text with content 1`] = `
<span
  class="vxteaser-text"
>
  This is the text!
</span>
`;
